--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@astrojs/sitemap": "^3.7.0",
     "astro": "^5.16.11",
     "sharp": "^0.34.3"
+  },
+  "devDependencies": {
+    "wrangler": "^4.59.2"
   }
 }
